@startuml
class BookQueries {
    Task<IEnumerable<Book>> GetBooksAsync(BookService)
    IQueryable<Book> GetBookById(DbContext, Guid)
}

class BookService {
    DbContext _context
    Task<IEnumerable<Book>> GetBooksAsync()
}

class DbContext

BookQueries ..|> BookService : calls (Books)
BookQueries ..|> DbContext : directly calls (BookById)
BookService *-- DbContext
@enduml